[gd_scene load_steps=22 format=3 uid="uid://cm5q85rrtu357"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_cw0hp"]
[ext_resource type="FontFile" uid="uid://p8jllrtc1283" path="res://assets/font/Chokokutai/Chokokutai-Regular.ttf" id="2_pmlrr"]
[ext_resource type="FontFile" uid="uid://dt55moadn75gc" path="res://assets/font/Roboto_Mono/static/RobotoMono-Bold.ttf" id="3_i1vgd"]
[ext_resource type="FontFile" uid="uid://it8yysnpsuds" path="res://assets/font/Roboto_Mono/static/RobotoMono-Medium.ttf" id="3_sgx82"]
[ext_resource type="FontFile" uid="uid://0r87x0j6burj" path="res://assets/font/Roboto_Mono/static/RobotoMono-MediumItalic.ttf" id="4_c8nip"]
[ext_resource type="Theme" uid="uid://0nf1kn3phpd8" path="res://assets/themes/scroll_theme.tres" id="4_x4u5x"]

[sub_resource type="Gradient" id="Gradient_4mjaj"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5e8vo"]
gradient = SubResource("Gradient_4mjaj")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qshor"]
bg_color = Color(0.571559, 0.506453, 0.290587, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.928174, 0.786989, 0.355904, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvhaq"]
bg_color = Color(0.6, 0.427451, 0.384314, 0.964706)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.672266, 0.446664, 0.167708, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lbvpc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jaxep"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvytu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c217b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ur8b1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7i1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_em55h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcu78"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhqf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81or3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1oqxw"]

[node name="Card" type="Node2D"]
script = ExtResource("1_cw0hp")

[node name="HoverHint" type="Label" parent="."]
offset_left = -35.0
offset_top = -185.0
offset_right = 35.0
offset_bottom = -160.0
text = "Use card"

[node name="HoverHint" type="Sprite2D" parent="HoverHint"]
position = Vector2(35, 110)
scale = Vector2(2.055, 2.5)
texture = SubResource("GradientTexture2D_5e8vo")

[node name="CardBackground" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -160.0
offset_right = 50.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qshor")

[node name="MarginContainer" type="MarginContainer" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CardBackground/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CardTitle" type="Label" parent="CardBackground/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pmlrr")
theme_override_font_sizes/font_size = 15
text = "CARDNAME"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ActualTitle" type="Label" parent="CardBackground/MarginContainer/VBoxContainer/CardTitle"]
layout_mode = 2
offset_top = 17.0
offset_right = 95.0
offset_bottom = 40.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_i1vgd")
theme_override_font_sizes/font_size = 10
text = "Template"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CardBackground/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 15

[node name="Description" type="RichTextLabel" parent="CardBackground/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
theme = ExtResource("4_x4u5x")
theme_override_fonts/normal_font = ExtResource("3_sgx82")
theme_override_fonts/italics_font = ExtResource("4_c8nip")
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "filler-filler-filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler "
autowrap_mode = 2

[node name="CardCost" type="Panel" parent="CardBackground"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 0
offset_left = 87.5
offset_top = 142.0
offset_right = 112.5
offset_bottom = 167.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kvhaq")

[node name="CardCostLabel" type="Label" parent="CardBackground/CardCost"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActivateButton" type="Button" parent="CardBackground"]
layout_mode = 2
offset_left = -7.0
offset_top = -23.0
offset_right = 107.0
offset_bottom = 160.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_lbvpc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_jaxep")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dvytu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_c217b")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ur8b1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_r7i1u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_em55h")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bcu78")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mhqf4")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_81or3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1oqxw")

[node name="EffectsList" type="Node2D" parent="."]
position = Vector2(-50, -140)

[node name="activeLabel" type="Label" parent="."]
offset_left = -44.0
offset_right = 46.0
offset_bottom = 23.0
text = "active"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="CardBackground/ActivateButton" to="." method="_on_activate_button_mouse_entered"]
[connection signal="mouse_exited" from="CardBackground/ActivateButton" to="." method="_on_activate_button_mouse_exited"]
[connection signal="pressed" from="CardBackground/ActivateButton" to="." method="_on_activate_button_pressed"]
